<?xml version="1.0"?>
<package format="2">
  <name>tracecompass_ros_testcases</name>
  <version>0.0.1</version>
  <description>Test package for Trace Compass Incubator ROS plugin</description>

  <author email="bedard.christophe@gmail.com">Christophe Bedard</author>
  <maintainer email="bedard.christophe@gmail.com">Christophe Bedard</maintainer>

  <license>GPL-3.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
